# TRANSFORMER

./: CMakeLists.txt  README.md  download_dataset.sh  main_high_initial_acc.cpp  main_speed_balanced.cpp  main_speed_max.cpp
CPU/: main.cpp
CPU/include/: matrix.h  mnist_loader.h  transformer.h
CPU/scr/: matrix.cpp  mnist_loader.cpp  transformer.cpp
GPU/: main.cpp  main_ultra_light.cpp
GPU/include/: cuda_ops.h  matrix.h  mnist_loader.h  transformer.h
GPU/src/: matrix.cpp  matrix_cuda.cu  mnist_loader.cpp  transformer.cpp
build_scripts/: build_cuda.bat  build_cuda_vs.bat  build_wsl.sh
python_tools/: dashboard.py  python_trainer.py
